// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalServiceRouterForm render should render 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Call External Service
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Call an external service"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        
        <div>
          <p>
            <span>
              Action
            </span>
          </p>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_external_service_call"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Select the call from external service to do"
                    readonly="readonly"
                    size="0"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Inserir Contato"
                    value="IncluirContato"
                  >
                    Inserir Contato
                  </option>
                  <option
                    label="Incluir Oportunidade"
                    value="IncluirOportunidade"
                  >
                    Incluir Oportunidade
                  </option>
                  <option
                    label="Listar Clientes"
                    value="ListarClientes"
                  >
                    Listar Clientes
                  </option>
                  <option
                    label="Pesquisar Títulos/Lançamentos"
                    value="PesquisarLancamentosRequest"
                  >
                    Pesquisar Títulos/Lançamentos
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="optional_text_input "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="Save as result"
              data-v-391ed932=""
            >
              <span
                class="label unnnic-font secondary color-neutral-cloudy body-md"
                data-v-391ed932=""
              >
                 Save as result 
              </span>
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  maxlength="64"
                  placeholder="Result"
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ExternalServiceRouterForm updates should save changes 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Call External Service
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Call an external service"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div>
          <p>
            <span>
              Integration with... 
            </span>
          </p>
          <div
            class="ele"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-select"
                data-passed-props="[object Object]"
                data-testid="temba_select_external_service"
              >
                <!---->
                <span
                  class="dropdown"
                  data-v-6fe2671f=""
                >
                  <div
                    data-v-2d3b8b50=""
                    data-v-6fe2671f=""
                    readonly="readonly"
                    style="position: relative;"
                  >
                    <input
                      class="input size-sm normal has-icon-right"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconright="arrow-button-down-1"
                      iconrightclickable="true"
                      placeholder="Select the external service to use"
                      readonly="readonly"
                      size="18"
                      type="text"
                    />
                    <!---->
                    <span
                      class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    __use_react_component_wrap=""
                    data-v-6fe2671f=""
                    style="all: unset;"
                  >
                    <option
                      label="Omie dummy project"
                      value="4b154b06-5ecd-43d9-afca-39738e6859d7"
                    >
                      Omie dummy project
                    </option>
                    <option
                      label="Omie dummy project 2"
                      value="5b154b06-5ecd-43d9-afca-39738e6859d7"
                    >
                      Omie dummy project 2
                    </option>
                  </div>
                  <div
                    class="dropdown-data"
                    data-v-6fe2671f=""
                    style="position: fixed; top: 0px;"
                  />
                </span>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div>
          <p>
            <span>
              Action
            </span>
          </p>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_external_service_call"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Select the call from external service to do"
                    readonly="readonly"
                    size="0"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Inserir Contato"
                    value="IncluirContato"
                  >
                    Inserir Contato
                  </option>
                  <option
                    label="Incluir Oportunidade"
                    value="IncluirOportunidade"
                  >
                    Incluir Oportunidade
                  </option>
                  <option
                    label="Listar Clientes"
                    value="ListarClientes"
                  >
                    Listar Clientes
                  </option>
                  <option
                    label="Pesquisar Títulos/Lançamentos"
                    value="PesquisarLancamentosRequest"
                  >
                    Pesquisar Títulos/Lançamentos
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="optional_text_input "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="Save as result"
              data-v-391ed932=""
            >
              <span
                class="label unnnic-font secondary color-neutral-cloudy body-md"
                data-v-391ed932=""
              >
                 Save as result 
              </span>
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  maxlength="64"
                  placeholder="Result"
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ExternalServiceRouterForm updates should save changes 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "call": Object {
            "name": "IncluirContato",
            "params": Array [
              Object {
                "filters": Array [
                  Object {
                    "name": "nCod",
                    "type": "integer",
                    "verboseName": "Código do Contato",
                  },
                  Object {
                    "name": "cCodInt",
                    "required": true,
                    "type": "text",
                    "verboseName": "Código de Integração",
                  },
                  Object {
                    "name": "cNome",
                    "required": true,
                    "type": "string",
                    "verboseName": "Nome do contato",
                  },
                  Object {
                    "name": "cSobrenome",
                    "type": "string",
                    "verboseName": "Sobrenome do contato",
                  },
                  Object {
                    "name": "cCargo",
                    "type": "string",
                    "verboseName": "Cargo",
                  },
                  Object {
                    "name": "dDtNasc",
                    "type": "string",
                    "verboseName": "Data de Nascimento",
                  },
                  Object {
                    "name": "nCodVend",
                    "type": "integer",
                    "verboseName": "Código do Vendedor",
                  },
                  Object {
                    "name": "nCodConta",
                    "type": "integer",
                    "verboseName": "Código da Conta",
                  },
                ],
                "type": "identificacao",
                "verboseName": "Identificação",
              },
              Object {
                "filters": Array [
                  Object {
                    "maxLength": 60,
                    "name": "cEndereco",
                    "type": "string",
                    "verboseName": "Endereço do contato",
                  },
                  Object {
                    "maxLength": 200,
                    "name": "cCompl",
                    "type": "string",
                    "verboseName": "Complemento ",
                  },
                  Object {
                    "maxLength": 10,
                    "name": "cCEP",
                    "type": "string",
                    "verboseName": "CEP",
                  },
                  Object {
                    "maxLength": 60,
                    "name": "cBairro",
                    "type": "string",
                    "verboseName": "Bairro ",
                  },
                  Object {
                    "maxLength": 50,
                    "name": "cCidade",
                    "type": "string",
                    "verboseName": "Cidade ",
                  },
                  Object {
                    "maxLength": 50,
                    "name": "cUF",
                    "type": "string",
                    "verboseName": "Estado ",
                  },
                  Object {
                    "maxLength": 50,
                    "name": "cPais",
                    "type": "string",
                    "verboseName": "País",
                  },
                ],
                "type": "endereco",
                "verboseName": "Endereço",
              },
              Object {
                "filters": Array [
                  Object {
                    "maxLength": 5,
                    "name": "cDDDCel1",
                    "type": "string",
                    "verboseName": "DDD do celular 1",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumCel1",
                    "type": "string",
                    "verboseName": "Número do Celular 1",
                  },
                  Object {
                    "maxLength": 5,
                    "name": "cDDDCel2",
                    "type": "string",
                    "verboseName": "DDD do Celular 2",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumCel2",
                    "type": "string",
                    "verboseName": "Número do Celular 2",
                  },
                  Object {
                    "maxLength": 5,
                    "name": "cDDDTel",
                    "type": "string",
                    "verboseName": "DDD do Telefone",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumTel",
                    "type": "string",
                    "verboseName": "Número do Telefone",
                  },
                  Object {
                    "maxLength": 5,
                    "name": "cDDDFax",
                    "type": "string",
                    "verboseName": "DDD do Fax",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumFax",
                    "type": "string",
                    "verboseName": "Número do Fax",
                  },
                  Object {
                    "maxLength": 200,
                    "name": "cEmail",
                    "type": "string",
                    "verboseName": "E-mail do contato",
                  },
                  Object {
                    "maxLength": 100,
                    "name": "cWebsite",
                    "type": "string",
                    "verboseName": "WebSite",
                  },
                ],
                "type": "telefone_email",
                "verboseName": "Telefone e Email",
              },
              Object {
                "filters": Array [],
                "type": "cObs",
                "verboseName": "Observações",
              },
            ],
            "value": "IncluirContato",
            "verboseName": "Inserir Contato",
          },
          "external_service": Object {
            "external_service_type": "omie",
            "name": "Omie dummy project 2",
            "uuid": "5b154b06-5ecd-43d9-afca-39738e6859d7",
          },
          "params": Array [
            Object {
              "data": Object {
                "validationFailures": Array [],
                "value": "data 1",
              },
              "filter": Object {
                "value": Object {
                  "name": "cCodInt",
                  "required": true,
                  "type": "text",
                  "verboseName": "Código de Integração",
                },
              },
              "filters": Array [
                Object {
                  "name": "nCod",
                  "type": "integer",
                  "verboseName": "Código do Contato",
                },
                Object {
                  "name": "cCodInt",
                  "required": true,
                  "type": "text",
                  "verboseName": "Código de Integração",
                },
                Object {
                  "name": "cNome",
                  "required": true,
                  "type": "string",
                  "verboseName": "Nome do contato",
                },
                Object {
                  "name": "cSobrenome",
                  "type": "string",
                  "verboseName": "Sobrenome do contato",
                },
                Object {
                  "name": "cCargo",
                  "type": "string",
                  "verboseName": "Cargo",
                },
                Object {
                  "name": "dDtNasc",
                  "type": "string",
                  "verboseName": "Data de Nascimento",
                },
                Object {
                  "name": "nCodVend",
                  "type": "integer",
                  "verboseName": "Código do Vendedor",
                },
                Object {
                  "name": "nCodConta",
                  "type": "integer",
                  "verboseName": "Código da Conta",
                },
              ],
              "required": undefined,
              "type": "identificacao",
              "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
              "valid": true,
              "verboseName": "Identificação",
            },
            Object {
              "data": Object {
                "validationFailures": Array [],
                "value": "data 2",
              },
              "filter": Object {
                "value": Object {
                  "name": "cNome",
                  "required": true,
                  "type": "string",
                  "verboseName": "Nome do contato",
                },
              },
              "filters": Array [
                Object {
                  "name": "nCod",
                  "type": "integer",
                  "verboseName": "Código do Contato",
                },
                Object {
                  "name": "cCodInt",
                  "required": true,
                  "type": "text",
                  "verboseName": "Código de Integração",
                },
                Object {
                  "name": "cNome",
                  "required": true,
                  "type": "string",
                  "verboseName": "Nome do contato",
                },
                Object {
                  "name": "cSobrenome",
                  "type": "string",
                  "verboseName": "Sobrenome do contato",
                },
                Object {
                  "name": "cCargo",
                  "type": "string",
                  "verboseName": "Cargo",
                },
                Object {
                  "name": "dDtNasc",
                  "type": "string",
                  "verboseName": "Data de Nascimento",
                },
                Object {
                  "name": "nCodVend",
                  "type": "integer",
                  "verboseName": "Código do Vendedor",
                },
                Object {
                  "name": "nCodConta",
                  "type": "integer",
                  "verboseName": "Código da Conta",
                },
              ],
              "required": undefined,
              "type": "identificacao",
              "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
              "valid": true,
              "verboseName": "Identificação",
            },
          ],
          "result_name": "My External Service Result",
          "type": "call_external_service",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "Success",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_category",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Success",
            "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
          },
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Failure",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
        ],
        "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "operand": "@results.my_external_service_result",
        "type": "switch",
      },
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_external_service",
    },
  },
]
`;
